# bc-io

./: .gitignore  CHANGELOG.md  README.md  cppcheck-suppressions.txt  meson.build
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_bc_io_file_ops.c  bench_bc_io_stream_read.c  bench_bc_io_stream_write.c  bench_bc_io_vs_libc.c  meson.build
debian/: changelog  control  debhelper-build-stamp  files  rules
debian/libbc-io-dev/DEBIAN/: control  md5sums
debian/libbc-io-dev/usr/include/bc/: bc_io.h  bc_io_file.h  bc_io_file_open.h  bc_io_file_path.h  bc_io_stream.h
debian/libbc-io-dev/usr/lib/x86_64-linux-gnu/pkgconfig/: bc-io.pc
debian/libbc-io-dev/usr/share/doc/libbc-io-dev/: copyright
fuzzing/: fuzz_bc_io_file_inode_set.c  fuzz_bc_io_file_path_join.c  fuzz_bc_io_mmap.c  fuzz_bc_io_stream.c  meson.build
include/internal/: bc_io_file_internal.h  bc_io_stream_internal.h  bc_io_stream_io_internal.h
include/public/: bc_io.h  bc_io_dirent_reader.h  bc_io_file.h  bc_io_file_inode.h  bc_io_file_stat.h  bc_io_mmap.h  bc_io_path.h  bc_io_perm.h  bc_io_random.h  bc_io_walk.h
src/: meson.build
src/file/: bc_io_dirent_reader.c  bc_io_file_inode.c  bc_io_file_open.c  bc_io_file_path.c  bc_io_file_stat.c
src/mmap/: bc_io_mmap.c
src/path/: bc_io_path.c
src/perm/: bc_io_perm.c
src/random/: bc_io_random.c
src/stream/: bc_io_stream.c  bc_io_stream_io.c  bc_io_stream_read.c  bc_io_stream_write.c
src/walk/: bc_io_walk_parallel.c  bc_io_walk_sequential.c
tests/: bc_core_wrap_redirect.h  meson.build  test_bc_io_dirent_reader.c  test_bc_io_file_helpers.c  test_bc_io_file_inode_set.c  test_bc_io_file_inode_set_errors.c  test_bc_io_file_map.c  test_bc_io_file_open.c  test_bc_io_file_stat.c  test_bc_io_path.c  test_bc_io_perm.c  test_bc_io_random.c  test_bc_io_stream_advise.c  test_bc_io_stream_alignment.c  test_bc_io_stream_allocation_wrap.c  test_bc_io_stream_edge_cases.c  test_bc_io_stream_io_wrap.c  test_bc_io_stream_metadata.c  test_bc_io_stream_open_wrap.c  test_bc_io_stream_read_file.c  test_bc_io_stream_read_memory.c  test_bc_io_stream_read_pipe.c  test_bc_io_stream_read_socket.c  test_bc_io_stream_stats.c  test_bc_io_stream_write_file.c  test_bc_io_stream_write_pipe.c  test_bc_io_stream_write_wrap.c  test_bc_io_symlink_safety.c  test_bc_io_umbrella_header_exposes_all_macros.c  test_bc_io_walk_parallel.c  test_bc_io_walk_sequential.c
